--- a/server/server_config.json
+++ b/server/server_config.json
@@ -2,5 +2,7 @@
     "tcp_port": 34480,
     "udp_port": 34485,
     "item_list_path": "../items/item_list.json",
-    "item_near_distance": 100.0
+    "item_near_distance": 100.0,
+    "chunk_size": 16,
+    "render_distance": 16
 }
