--- a/server/server_config.json
+++ b/server/server_config.json
@@ -2,8 +2,11 @@
     "tcp_port": 34480,
     "udp_port": 34485,
     "item_list_path": "../items/item_list.json",
+
     "item_near_distance": 100.0,
+    "render_distance": 12,
     "chunk_size": 16,
-    "render_distance": 16,
+    "chunk_scale": 3.0,
+
     "chunkdata_uncompressed_max_bytes": 768000
 }
